[package]
name = "fallthrough"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Pattern match with fallthrough, in the style of C switch"
homepage = "https://github.com/Jules-Bertholet/fallthrough"
repository = "https://github.com/Jules-Bertholet/fallthrough"
keywords = ["fallthrough", "macro", "switch", "control-flow"]
categories = ["rust-patterns"]
